--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,9 +13,9 @@
         </thead>
         <tbody>
             <tr>
-                <td>1</td>
-                <td>Mark</td>
-                <td>Otto</td>
+                <td> {{ nombre }} </td>
+                <td> uppercase </td>
+                <td> {{ nombre | uppercase }} </td>
             </tr>
         </tbody>
     </table>
