--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,11 @@
                 <td> uppercase </td>
                 <td> {{ nombre | uppercase }} </td>
             </tr>
+            <tr>
+                <td> {{ nombre }} </td>
+                <td> lowercase </td>
+                <td> {{ nombre | lowercase }} </td>
+            </tr>
         </tbody>
     </table>
 </div>
