Pipe: Number (Decimal).

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,6 +37,21 @@
                 <td> slice:1:5 </td>
                 <td> {{ arreglo | slice:1:5 }} </td>
             </tr>
+            <tr>
+                <td> {{ PI }} </td>
+                <td> number </td>
+                <td> {{ PI | number }} </td>
+            </tr>
+            <tr>
+                <td> {{ PI }} </td>
+                <td> number:'3.0-0' </td>
+                <td> {{ PI | number:'3.0-0' }} </td>
+            </tr>
+            <tr>
+                <td> {{ PI }} </td>
+                <td> number:'1.0-2' </td>
+                <td> {{ PI | number:'1.0-2' }} </td>
+            </tr>
         </tbody>
     </table>
 
