--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -52,6 +52,16 @@
                 <td> number:'1.0-2' </td>
                 <td> {{ PI | number:'1.0-2' }} </td>
             </tr>
+            <tr>
+                <td> {{ num }} </td>
+                <td> percent </td>
+                <td> {{ num | percent }} </td>
+            </tr>
+            <tr>
+                <td> {{ num }} </td>
+                <td> percent:'2.2-2' </td>
+                <td> {{ num | percent:'2.2-2' }} </td>
+            </tr>
         </tbody>
     </table>
 
