--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -62,6 +62,31 @@
                 <td> percent:'2.2-2' </td>
                 <td> {{ num | percent:'2.2-2' }} </td>
             </tr>
+            <tr>
+                <td> {{ salario }} </td>
+                <td> currency </td>
+                <td> {{ salario | currency }} </td>
+            </tr>
+            <tr>
+                <td> {{ salario }} </td>
+                <td> currency:'EUR' </td>
+                <td> {{ salario | currency:'EUR' }} </td>
+            </tr>
+            <tr>
+                <td> {{ salario }} </td>
+                <td> currency:'EUR':false </td>
+                <td> {{ salario | currency:'EUR':false }} </td>
+            </tr>
+            <tr>
+                <td> {{ salario }} </td>
+                <td> currency:'EUR':true:'4.0-0' </td>
+                <td> {{ salario | currency:'EUR':true:'4.0-0' }} </td>
+            </tr>
+            <tr>
+                <td> {{ salario }} </td>
+                <td> number:'.2-2' </td>
+                <td> {{ salario | number:'.2-2' }} </td>
+            </tr>
         </tbody>
     </table>
 
