--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -94,4 +94,10 @@
     <ul>
         <li *ngFor="let item of arreglo | slice:4:7">{{ item }}</li>
     </ul>
+
+    <h4>JSON</h4>
+
+    <pre>
+        {{ heroe | json}}
+    </pre>
 </div>
