--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -87,6 +87,11 @@
                 <td> number:'.2-2' </td>
                 <td> {{ salario | number:'.2-2' }} </td>
             </tr>
+            <tr>
+                <td> {{ valorDePromesa }} </td>
+                <td> async </td>
+                <td> {{ valorDePromesa | async }} </td>
+            </tr>
         </tbody>
     </table>
 
@@ -98,6 +103,6 @@
     <h4>JSON</h4>
 
     <pre>
-        {{ heroe | json}}
+        {{ heroe | json }}
     </pre>
 </div>
