Pipe personalizado (Capitalizar Palabras).

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -107,6 +107,11 @@
                 <td> date:'MMMM - dd' </td>
                 <td> {{ fecha | date:'MMMM - dd' }} </td>
             </tr>
+            <tr>
+                <td> {{ name }} </td>
+                <td> capitalizado </td>
+                <td> {{ name | capitalizado }} </td>
+            </tr>
         </tbody>
     </table>
 
