Pipe personalizado (Capitalizar Palabras) validando una condición.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -112,6 +112,11 @@
                 <td> capitalizado </td>
                 <td> {{ name | capitalizado }} </td>
             </tr>
+            <tr>
+                <td> {{ name }} </td>
+                <td> capitalizado </td>
+                <td> {{ name | capitalizado:false }} </td>
+            </tr>
         </tbody>
     </table>
 
