--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -130,4 +130,8 @@
     <pre>
         {{ heroe | json }}
     </pre>
+
+    <h4>YouTube <small>video</small></h4>
+    <hr>
+    <iframe width="560" height="315" [src]="video | domseguro:'https://www.youtube.com/embed/'" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 </div>
