Pipe personalizado que permite convertir las letras a *.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -117,6 +117,14 @@
                 <td> capitalizado </td>
                 <td> {{ name | capitalizado:false }} </td>
             </tr>
+            <tr>
+                <td> {{ nombre }} </td>
+                <td>
+                    password:{{ activar }} <br>
+                    <button (click)="activar = !activar" class="btn btn-outline-primary">Activar/desactivar</button>
+                </td>
+                <td> {{ nombre | password:activar }} </td>
+            </tr>
         </tbody>
     </table>
 
